# Q-measure

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
experiments/: bell_readout_calibration.py  ghz_dephasing_uncertainty.py  single_qubit_damping_sweep.py
qmeasure/: __init__.py  calibrate.py  config.py  core.py  measure.py  metrics.py  noise.py  report.py  simulate.py
tests/: test_calibrate.py  test_core.py  test_measurement.py  test_noise_channels.py  test_simulate.py
